Python Path For FFMPEGSettings Missing #75081

Closed
opened 2020-03-25 19:19:11 +01:00 by Jeroen Bakker · 6 comments
Member

System Information
Operating system: Linux-5.0.0-38-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Mesa DRI Intel(R) UHD Graphics 620 (Kabylake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.0-devel (git-2631fd3 2019-07-24 cosmic-oibaf-ppa)

Blender Version
Broken: version: 2.83 (sub 11), branch: Unknown, commit date: 2020-03-25, hash: blender/blender@6681a33a6f
Worked: Perhaps never worked

Short description of error
The python path for FFMPEGSettings does not exist. In stead of the correct python path it results in bpy.context.scene.<ffmpeg_setting>

Exact steps for others to reproduce the error

  1. Enable Python Tools.
  2. Go to the output path.
  3. Hover with mouse over a FFMPEG Settings (like codec) and see it gives back that it is a scene setting.
  4. Change the setting and look in the Info Panel

The actual path should be bpy.context.scene.render.ffmpeg

**System Information** Operating system: Linux-5.0.0-38-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Mesa DRI Intel(R) UHD Graphics 620 (Kabylake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.0-devel (git-2631fd3 2019-07-24 cosmic-oibaf-ppa) **Blender Version** Broken: version: 2.83 (sub 11), branch: Unknown, commit date: 2020-03-25, hash: `blender/blender@6681a33a6f` Worked: Perhaps never worked **Short description of error** The python path for FFMPEGSettings does not exist. In stead of the correct python path it results in `bpy.context.scene.<ffmpeg_setting>` **Exact steps for others to reproduce the error** 1. Enable Python Tools. 2. Go to the output path. 3. Hover with mouse over a FFMPEG Settings (like codec) and see it gives back that it is a scene setting. 4. Change the setting and look in the Info Panel The actual path should be `bpy.context.scene.render.ffmpeg`
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker changed title from Python Path For FFMPegSettings Missing to Python Path For FFMPEGSettings Missing 2020-03-25 19:19:28 +01:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mercyberg

Added subscriber: @mercyberg
Matt Rossman self-assigned this 2020-03-26 01:13:51 +01:00

Newbie here, taking this as a first exercise in familiarizing myself with the codebase. After poking around files throughout day I finally got a fix, I will make a diff in a bit.

Newbie here, taking this as a first exercise in familiarizing myself with the codebase. After poking around files throughout day I finally got a fix, I will make a diff in a bit.

This issue was referenced by blender/blender@eca52402bc

This issue was referenced by blender/blender@eca52402bcc7d8f57d27a79c3da9d2e241d32ed1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#75081
No description provided.