Fix T75081: RNA path For FFMPEGSettings missing