source/blender/makesrna/intern/rna_scene.c
@@ -2555,6 +2555,11 @@ static char *rna_UnitSettings_path(PointerRNA *UNUSED(ptr))
   return BLI_strdup("unit_settings");
 }
 
+static char *rna_FFmpegSettings_path(PointerRNA *UNUSED(ptr))
+{
+  return BLI_strdup("render.ffmpeg");
+}
+
 #else
 
 /* Grease Pencil Interpolation tool settings */
@@ -5461,6 +5466,7 @@ static void rna_def_scene_ffmpeg_settings(BlenderRNA *brna)
 
   srna = RNA_def_struct(brna, "FFmpegSettings", NULL);
   RNA_def_struct_sdna(srna, "FFMpegCodecData");
+  RNA_def_struct_path_func(srna, "rna_FFmpegSettings_path");
   RNA_def_struct_ui_text(srna, "FFmpeg Settings", "FFmpeg related settings for the scene");
 
 #  ifdef WITH_FFMPEG
